--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "yiisoft/yii2-swiftmailer": "*",
         "amnah/yii2-user": "^4.0",
         "wbraganca/yii2-dynamicform": "*",
-        "kartik-v/yii2-grid": "@dev",
-        "kartik-v/yii2-mpdf": "@dev"
+        "kartik-v/yii2-mpdf": "@dev",
+        "kartik-v/yii2-date-range": "dev-master",
+        "kartik-v/yii2-grid": "dev-master",
+        "kartik-v/yii2-editable": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
