--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
+        "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-mpdf": "@dev",
         "kartik-v/yii2-date-range": "dev-master",
         "kartik-v/yii2-grid": "dev-master"
